--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "legacy-app-server-cli",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "CLI tools for the Legacy App Server",
   "main": "index.js",
   "dependencies": {
+    "client-sessions": "^0.8.0",
     "cmd-executor": "^1.1.1",
+    "express": "^4.16.3",
     "readline-sync": "^1.4.9",
+    "socket.io": "^2.1.0",
     "yargs": "^11.0.0"
   },
   "devDependencies": {},
