--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "legacy-app-server-cli",
-  "version": "1.2.8",
+  "version": "1.2.9",
   "description": "CLI tools for the Legacy App Server",
   "main": "index.js",
   "dependencies": {
     "chokidar": "^2.0.3",
     "client-sessions": "^0.8.0",
     "colors": "^1.2.1",
+    "cors": "^2.8.5",
     "express": "^4.16.3",
     "readline-sync": "^1.4.9",
     "socket.io": "^2.1.0",
